# operaton-robot

./: .gitignore  Makefile  flake.nix  pom.xml
.nix/code/: default.nix
.nix/codium/: default.nix
.nix/robot-env/: default.nix  pyproject.toml
example/: Example.robot
lib/: ProcessEngine.py
src/main/java/org/operaton/bpm/extension/robot/: Robot.java
