[tool.poetry]
name = "robot-env"
version = "1.0.0"
description = ""
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
robotframework = "^7.1.1"
robotcode = "^0.95.2"
robotcode-core = "^0.95.2"
robotcode-debugger = "^0.95.2"
robotcode-jsonrpc2 = "^0.95.2"
robotcode-modifiers = "^0.95.2"
robotcode-plugin = "^0.95.2"
robotcode-repl = "^0.95.2"
robotcode-robot = "^0.95.2"
robotcode-runner = "^0.95.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
